# forfun

./: README.md
algorithms/00-Stacks/: main.cpp  stack.cpp  stack.hpp
algorithms/01-Linked_Lists/a-singly_linked_list/: basicLL.cpp  basicLL.hpp  main.cpp
cpf-cnpj/: CNPJ.cpp  CNPJ.hpp  CPF.cpp  CPF.hpp  main.cpp
nd-100/: BUILD.sh  README.md
nd-100/src/: CMakeLists.txt
nd-100/src/lib/: CMakeLists.txt  ND100GPS.cpp  ND100GPS.hpp
nd-100/src/main/: CMakeLists.txt  main.cpp
realtimeplot/: README.md
realtimeplot/src/: RealTimePlot.pro  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  qcustomplot.cpp  qcustomplot.hpp
visualmalha/: BUILD.sh  CMakeLists.txt  Readme.md
visualmalha/lib/: CMakeLists.txt  VisualMalha.cpp  VisualMalha.hpp
visualmalha/main/: CMakeLists.txt  main.cpp
