CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ND100 CXX)
SET(CMAKE_BUILD_TYPE Release)

# Put everything in same folder
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/ND100-bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/ND100-bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/ND100-bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/ND100-bin)

#Folders that have files to build
ADD_SUBDIRECTORY(main)
ADD_SUBDIRECTORY(lib)

